--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,13 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "codegen": "graphql-codegen",
-    "create-components": "npx @dojoengine/core ../contracts/manifests/dev/manifest.json src/dojo/generated/contractComponents.ts http://localhost:5050 0x1ee592601cde2eb4147136aadf1f2f07d4519d510e0cd013a4339dd09a1e192"
+    "components": "npx @dojoengine/core ../contracts/manifests/dev/manifest.json src/dojo/contractComponents.ts http://localhost:5050 0x1ee592601cde2eb4147136aadf1f2f07d4519d510e0cd013a4339dd09a1e192"
   },
   "dependencies": {
     "@dojoengine/core": "0.6.122",
     "@dojoengine/create-burner": "0.6.122",
     "@dojoengine/react": "0.6.122",
-    "@dojoengine/recs": "0.1.35",
+    "@dojoengine/recs": "^0.1.35",
     "@dojoengine/state": "0.6.122",
     "@dojoengine/torii-client": "0.6.122",
     "@dojoengine/utils": "0.6.122",
